<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_registerPill"
        android:icon="@drawable/ic_pills"
        android:title="@string/title_register" />
    <item
        android:id="@+id/navigation_symptoms"
        android:icon="@drawable/ic_symptoms"
        android:title="@string/title_sintomas" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />
</menu>