<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206A98"
    tools:context=".fragments.login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="126dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="387dp"
        android:layout_height="294dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/celeste"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0"
                android:lineSpacingExtra="12sp"
                android:text="@string/Bienvenido"
                android:textColor="@color/celesteClaro"
                android:textSize="40sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/textFgLoginEmail"
                style="@style/GrayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="30dp"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textFgLoginPass"
                style="@style/GrayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="30dp"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textFgLoginOlvideCont"
                android:layout_width="174dp"
                android:layout_height="27dp"
                android:layout_marginLeft="80dp"
                android:gravity="center"
                android:text="@string/olvide_contraseña"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFgLoginLogin"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/Acceder"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/francois_one" />

            <TextView
                android:id="@+id/errorMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Se ha producido un error de autenticación"
                android:textColor="#FF0000"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="684dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textFgLoginSinCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/Sin_cuenta"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/twFgloginRegistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/Registrarse"
            android:textColor="@color/celesteClaro"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>