<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".profileUserFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textColor="@color/celesteClaro"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textColor="@color/celesteClaro"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/celeste"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewWelcome3"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="64dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0"
                android:lineSpacingExtra="12sp"
                android:paddingStart="10dp"
                android:text="@string/my_data"
                android:textColor="@color/celesteClaro"
                android:textSize="40sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/myProfileName"
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/Nombre"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewWelcome3" />

            <EditText
                android:id="@+id/myProfileLastName"
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/Apellido"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myProfileName" />

            <EditText
                android:id="@+id/myProfileEmail"
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myProfileLastName" />

            <EditText
                android:id="@+id/myProfileEmergencyContact"
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/emergency_contact"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/saveBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/francois_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/myProfilePassword"
                style="@style/GrayText"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myProfileEmail" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".5"

        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>